--- a/imgui.ini
+++ b/imgui.ini
@@ -7,14 +7,30 @@ Pos=837,173
 Size=550,618
 
 [Window][DebugCamera]
-Pos=42,527
+Pos=16,619
 Size=400,80
 
 [Window][teapot]
-Pos=109,79
+Pos=856,42
 Size=324,350
 
 [Window][multiMaterial]
-Pos=44,46
+Pos=38,250
 Size=382,442
+
+[Window][suzanne]
+Pos=67,224
+Size=369,411
+
+[Window][bunny]
+Pos=837,147
+Size=371,404
+
+[Window][Sphere_uvChecker.png]
+Pos=172,201
+Size=362,404
+
+[Window][ShowObjects]
+Pos=15,461
+Size=141,158
 
