--- a/imgui.ini
+++ b/imgui.ini
@@ -19,7 +19,7 @@ Pos=38,250
 Size=382,442
 
 [Window][suzanne]
-Pos=67,224
+Pos=88,224
 Size=369,411
 
 [Window][bunny]
@@ -33,4 +33,8 @@ Size=362,404
 [Window][ShowObjects]
 Pos=15,461
 Size=141,158
+
+[Window][Objects]
+Pos=15,461
+Size=130,146
 
