--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Pos=11,623
 Size=400,80
 
 [Window][teapot]
-Pos=369,12
+Pos=33,228
 Size=326,291
 
 [Window][multiMaterial]
@@ -37,4 +37,8 @@ Size=141,158
 [Window][Objects]
 Pos=8,443
 Size=149,176
+
+[Window][Sprite]
+Pos=113,21
+Size=257,180
 
