punctualLightの処理を切り分けすることに成功

--- a/imgui.ini
+++ b/imgui.ini
@@ -27,7 +27,7 @@ Pos=94,243
 Size=371,404
 
 [Window][Sphere_uvChecker.png]
-Pos=80,47
+Pos=12,56
 Size=408,436
 
 [Window][ShowObjects]
@@ -35,10 +35,14 @@ Pos=15,461
 Size=141,158
 
 [Window][Objects]
-Pos=8,443
-Size=267,156
+Pos=12,444
+Size=272,174
 
 [Window][Sprite]
-Pos=113,21
-Size=257,180
+Pos=288,445
+Size=268,172
+
+[Window][multiMesh]
+Pos=43,98
+Size=322,344
 
