--- a/imgui.ini
+++ b/imgui.ini
@@ -7,7 +7,7 @@ Pos=837,173
 Size=550,618
 
 [Window][DebugCamera]
-Pos=13,615
+Pos=13,469
 Size=400,80
 
 [Window][teapot]
@@ -19,15 +19,15 @@ Pos=1,11
 Size=382,442
 
 [Window][suzanne]
-Pos=588,422
-Size=331,303
+Pos=67,244
+Size=331,326
 
 [Window][bunny]
 Pos=94,243
 Size=371,404
 
 [Window][Sphere_uvChecker.png]
-Pos=480,391
+Pos=54,276
 Size=408,436
 
 [Window][ShowObjects]
@@ -35,7 +35,7 @@ Pos=15,461
 Size=141,158
 
 [Window][Objects]
-Pos=12,415
+Pos=11,415
 Size=272,174
 
 [Window][Sprite]
@@ -45,4 +45,8 @@ Size=268,194
 [Window][multiMesh]
 Pos=89,188
 Size=322,344
+
+[Window][PunctualLightSetting]
+Pos=940,46
+Size=305,463
 
