--- a/Lazieal.vcxproj.filters
+++ b/Lazieal.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="BaseScene.cpp">
       <Filter>Engine\Lazieal\Scene\BaseScene</Filter>
     </ClCompile>
+    <ClCompile Include="LevelDataLoader.cpp">
+      <Filter>Engine\Lazieal\LevelDataLoader</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
@@ -220,6 +223,9 @@
     <Filter Include="Engine\Lazieal\Manager\SoundManager">
       <UniqueIdentifier>{61255ae6-782a-4f85-afc1-f42e0fe79516}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\Lazieal\LevelDataLoader">
+      <UniqueIdentifier>{edc6bbab-b2ad-4303-8af4-4928866dc572}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lazieal.h">
@@ -320,6 +326,9 @@
     </ClInclude>
     <ClInclude Include="SoundManager.h">
       <Filter>Engine\Lazieal\Manager\SoundManager</Filter>
+    </ClInclude>
+    <ClInclude Include="LevelDataLoader.h">
+      <Filter>Engine\Lazieal\LevelDataLoader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
