--- a/Lazieal.vcxproj
+++ b/Lazieal.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="ImGuiManager.cpp" />
     <ClCompile Include="Lazieal.cpp" />
+    <ClCompile Include="LevelData.cpp" />
     <ClCompile Include="LevelDataLoader.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
@@ -50,6 +51,7 @@
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="ImGuiManager.h" />
     <ClInclude Include="Lazieal.h" />
+    <ClInclude Include="LevelData.h" />
     <ClInclude Include="LevelDataLoader.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="MathFunction.h" />
