--- a/Lazieal.vcxproj.filters
+++ b/Lazieal.vcxproj.filters
@@ -84,7 +84,10 @@
       <Filter>Engine\Lazieal\Scene\BaseScene</Filter>
     </ClCompile>
     <ClCompile Include="LevelDataLoader.cpp">
-      <Filter>Engine\Lazieal\LevelDataLoader</Filter>
+      <Filter>Engine\Lazieal\Level\Loader</Filter>
+    </ClCompile>
+    <ClCompile Include="LevelData.cpp">
+      <Filter>Engine\Lazieal\Level\Data</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -223,7 +226,13 @@
     <Filter Include="Engine\Lazieal\Manager\SoundManager">
       <UniqueIdentifier>{61255ae6-782a-4f85-afc1-f42e0fe79516}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\Lazieal\LevelDataLoader">
+    <Filter Include="Engine\Lazieal\Level">
+      <UniqueIdentifier>{8eb6726c-b851-480f-b353-b1a4f6472922}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Lazieal\Level\Data">
+      <UniqueIdentifier>{c780c5c8-af1b-41f6-9219-d6030afa183d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Lazieal\Level\Loader">
       <UniqueIdentifier>{edc6bbab-b2ad-4303-8af4-4928866dc572}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -328,7 +337,10 @@
       <Filter>Engine\Lazieal\Manager\SoundManager</Filter>
     </ClInclude>
     <ClInclude Include="LevelDataLoader.h">
-      <Filter>Engine\Lazieal\LevelDataLoader</Filter>
+      <Filter>Engine\Lazieal\Level\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="LevelData.h">
+      <Filter>Engine\Lazieal\Level\Data</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
