圧縮済みのdssファイルの読み込みに成功

--- a/imgui.ini
+++ b/imgui.ini
@@ -56,5 +56,9 @@ Size=87,54
 
 [Window][Resources/uvChecker.png]
 Pos=60,60
+Size=274,221
+
+[Window][Resources/uvChecker.dds]
+Pos=60,60
 Size=117,169
 
