--- a/Lazieal.vcxproj
+++ b/Lazieal.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="DirectXCommon.cpp" />
     <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="ImGuiManager.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="Lazieal.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
@@ -47,6 +48,7 @@
     <ClInclude Include="DirectXCommon.h" />
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="ImGuiManager.h" />
+    <ClInclude Include="Input.h" />
     <ClInclude Include="Lazieal.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="MathFunction.h" />
