--- a/Lazieal.vcxproj.filters
+++ b/Lazieal.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClCompile Include="SoundManager.cpp">
       <Filter>Engine\Lazieal\Manager\SoundManager</Filter>
     </ClCompile>
+    <ClCompile Include="Input.cpp">
+      <Filter>Engine\Base\Input</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
@@ -217,6 +220,9 @@
     <Filter Include="Engine\Lazieal\Manager\SoundManager">
       <UniqueIdentifier>{61255ae6-782a-4f85-afc1-f42e0fe79516}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\Base\Input">
+      <UniqueIdentifier>{7d459b02-cfdb-489e-b011-19c09ebf7ecf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lazieal.h">
@@ -317,6 +323,9 @@
     </ClInclude>
     <ClInclude Include="SoundManager.h">
       <Filter>Engine\Lazieal\Manager\SoundManager</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Engine\Base\Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
