--- a/imgui.ini
+++ b/imgui.ini
@@ -7,7 +7,7 @@ Pos=837,173
 Size=550,618
 
 [Window][DebugCamera]
-Pos=67,597
+Pos=95,614
 Size=400,80
 
 [Window][teapot]
@@ -15,11 +15,11 @@ Pos=926,424
 Size=326,291
 
 [Window][multiMaterial]
-Pos=1,11
+Pos=225,162
 Size=382,442
 
 [Window][suzanne]
-Pos=67,244
+Pos=72,244
 Size=331,326
 
 [Window][bunny]
@@ -35,12 +35,12 @@ Pos=15,461
 Size=141,158
 
 [Window][Objects]
-Pos=11,415
+Pos=37,429
 Size=272,174
 
 [Window][Sprite]
-Pos=189,219
-Size=268,194
+Pos=74,221
+Size=278,194
 
 [Window][multiMesh]
 Pos=89,188
@@ -53,4 +53,8 @@ Size=364,484
 [Window][Sound]
 Pos=60,60
 Size=87,54
+
+[Window][framelate]
+Pos=60,123
+Size=153,94
 
